--- a/front_end/analyzer/public/index.html
+++ b/front_end/analyzer/public/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-
+    <script src="/node_modules/bulma-extensions/bulma-calendar/dist/js/bulma-calendar.min.js"></script>
+    <link src="/node_modules/bulma-extensions/bulma-calendar/dist/bulma-calendar.min.js"></link>
     <title>analyzer</title>
   </head>
   <body>
